# MarketInsight-Engine

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  runbook.md
src/wall_street_terminal/: __init__.py  data.py  presentation.py  quant.py  types.py  viz.py
src/wall_street_terminal/ui/: app.py
tests/: conftest.py  test_data.py  test_quant.py  test_viz.py
